# nameless

./: .env.example  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.claude/: CLAUDE.md
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ci.yml
.planning/: .continue-here.md  ENGINEERING-PRINCIPLES.md  ENVIRONMENT.md  HANDOFF.json  MILESTONE-v1.0-SUMMARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  (+3 more)
crates/nameless-adapters/: Cargo.toml
crates/nameless-adapters/src/: lib.rs  object_store_fs.rs  object_store_mem.rs  object_store_s3.rs  probe.rs  queue_mem.rs  queue_sqlxmq.rs  reference_store_file.rs  reference_store_mem.rs  reference_store_pg.rs  repo_file.rs  repo_mem.rs  repo_pg.rs  sample_store_file.rs  sample_store_mem.rs  sample_store_pg.rs
crates/nameless-api/: Cargo.toml  LEARNING.md  README.md
crates/nameless-api/src/: dto.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
crates/nameless-api/tests/: api_tests.rs
crates/nameless-cli/: Cargo.toml
crates/nameless-cli/src/: cli.rs  error.rs  lib.rs  main.rs  output.rs  profile.rs
crates/nameless-core/: Cargo.toml
crates/nameless-core/src/: attribution.rs  conditioning.rs  error.rs  fragment.rs  job.rs  lib.rs  ports.rs  provenance.rs  reference.rs  state_machine.rs  stems.rs
knowledge-pipeline/: LEARNING.md  README.md  pyproject.toml
knowledge-pipeline/fixtures/claims/: amapiano_logdrum_flex.json  amapiano_logdrum_layered.json  amapiano_subbass.json  deephouse_subbass.json  rnb_subbass_vocals.json
knowledge-pipeline/fixtures/grounding/parents/: parent_amapiano_groove.json  parent_deephouse_space.json  parent_jazzy_piano.json
knowledge-pipeline/fixtures/grounding/tracks/: ben_produces_emoyeni.json  liyana_ricky_sunday_blue.json  lowbass_djy_lounge.json
knowledge-pipeline/fixtures/transcripts/: altpiano_visual_only.json  amapiano_drums_rich.json  amapiano_mixing_auto_noisy.json  deephouse_atmosphere_sparse.json  deephouse_bass_auto_good.json  rnb_vocal_no_captions.json
knowledge-pipeline/src/knowledge_pipeline/: __init__.py  claim_fixtures.py  claims_cli.py  claims_sql.py  cli.py  fixtures.py  grounding_fixtures.py  grounding_pipeline.py  mining_pipeline.py  pipeline.py  ports.py  prompts.py  registry_sql.py  skills_cli.py  skills_sql.py  synthesis_pipeline.py
knowledge-pipeline/src/knowledge_pipeline/adapters/: __init__.py  claim_extractor_anthropic.py  claim_extractor_fake.py  claim_extractor_file.py  claim_store_mem.py  claim_store_sqlite.py  clock_fake.py  clock_real.py  corpus_fs.py  corpus_mem.py  discovery_fake.py  discovery_ytdlp.py  fetch_fake.py  fetch_youtube.py  rate_limiter.py  similarity_embeddings.py  similarity_keyword.py  skill_store_fs.py  skill_store_mem.py  skill_synthesizer_anthropic.py  skill_synthesizer_fake.py  skill_synthesizer_file.py  track_analyzer_fake.py  track_analyzer_worker.py  transcribe_fake.py  transcribe_whisper.py
knowledge-pipeline/src/knowledge_pipeline/domain/: __init__.py  claims.py  genres.py  grounding.py  keys.py  models.py  skills.py
knowledge-pipeline/src/knowledge_pipeline/pure/: __init__.py  audio_claims.py  audit.py  captions.py  cell_selection.py  citation.py  citation_gate.py  claim_dedup.py  confidence.py  cross_reference.py  decompose.py  dedup.py  extractability.py  extraction_schema.py  fallback.py  grounded_emitter.py  layered_emitter.py  query_grid.py  snapshot.py  synthesis_schema.py  synthesis_template.py  vocab.py
knowledge-pipeline/tests/: conftest.py  test_audio_claims.py  test_audit.py  test_captions.py  test_cell_selection.py  test_citation.py  test_citation_gate.py  test_claim_dedup.py  test_claim_extractor_file.py  test_claim_keys.py  test_claim_schema.py  test_claim_store.py  test_claims_cli.py  test_cli.py  test_confidence.py  test_corpus_store.py  test_cross_reference.py  test_decompose.py  test_dedup.py  test_extractability.py  test_extraction_schema.py  test_fallback.py  test_fetch_youtube_availability.py  test_grounded_emitter.py  test_grounding_fixtures.py  test_grounding_pipeline.py  test_layered_emitter.py  test_mining_pipeline.py  test_no_synthesis_boundary.py  test_pipeline.py  test_query_grid.py  test_rate_limiter.py  test_skill_domain.py  test_skill_store.py  test_skill_synthesizer_file.py  test_skills_cli.py  test_skills_no_synthesis_boundary.py  test_snapshot.py  test_synthesis_pipeline.py  test_synthesis_template.py
migrations/: 0001_init.sql  0002_fragment_features.sql  0003_reference_tracks.sql  0004_sampling.sql  0005_sqlxmq.sql
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
workers/: LEARNING.md  README.md  pyproject.toml
workers/src/nameless_workers/: __init__.py  cli.py  consumer.py  ports.py  reference_ports.py  runner.py  separation_consumer.py  separation_ports.py
workers/src/nameless_workers/adapters/: __init__.py  audio_loader_fake.py  audio_loader_store.py  embed_clap.py  embed_fake.py  feature_fake.py  feature_librosa.py  genre_tagger.py  job_source_mem.py  reference_analyzer_clap.py  reference_analyzer_fake.py  repo_mem.py  repo_pg.py  stem_separator_demucs.py  stem_separator_fake.py  stem_store_mem.py  track_loader_fake.py  track_loader_store.py  vibe_describer_claude.py  vibe_describer_fake.py
workers/src/nameless_workers/domain/: __init__.py  models.py  provenance.py  reference.py  separation.py  state.py
workers/src/nameless_workers/pure/: __init__.py  key.py  non_melodic.py  reference_summary.py  separation.py  stereo_width.py  tonal_balance.py  vectors.py
workers/tests/: conftest.py  test_consumer.py  test_genre_tagger.py  test_key_from_chroma.py  test_models.py  test_non_melodic.py  test_reference_analyzer.py  test_reference_models.py  test_reference_summary.py  test_repo_mem.py  test_runner.py  test_separation.py  test_separation_consumer.py  test_state_mirror.py  test_stem_separator_fake.py  test_stereo_width.py  test_tonal_balance.py  test_vectors.py  test_vibe_describer.py
(+131 files in other folders)
